--- a/frontend-app/src/app/app.component.html
+++ b/frontend-app/src/app/app.component.html
@@ -1,1 +1,8 @@
 <h1>Hello World!!</h1>
+
+<app-users></app-users>
+<app-users></app-users>
+<app-users></app-users>
+<app-users></app-users>
+<app-users></app-users>
+<app-users></app-users>
