--- a/frontend-app/src/app/users/users.component.html
+++ b/frontend-app/src/app/users/users.component.html
@@ -1,1 +1,28 @@
-<p>users works!</p>
+<ul class="list-unstyled">
+  <li>
+    <div class="row">
+      <div class="col-4 text-center">
+        <img
+          [src]="user.avatar"
+          [alt]="user.avatar"
+          class="img-fluid rounded-circle mb-3"
+        />
+
+        <button class="btn btn-info" (click)="onMoreInfo(user)">
+          More Info
+        </button>
+      </div>
+      <div class="col-8">
+        <h1>{{ user.firstName }} {{ user.lastName }}</h1>
+
+        <p>Date of Birth : <span [innerText]="user.dob"></span></p>
+
+        <p>Income : {{ user.income }}</p>
+
+        <p>Total Votes : {{ user.votes }}</p>
+
+        <input type="number" [(ngModel)]="user.votes" />
+      </div>
+    </div>
+  </li>
+</ul>
