--- a/frontend-app/src/app/app.component.html
+++ b/frontend-app/src/app/app.component.html
@@ -1,5 +1,9 @@
 <div class="container">
   <h1>Hello World!!</h1>
+  <!-- <input type="text" [(ngModel)]="title" />
 
+  <button (click)="toggle = !toggle">Toggle</button> -->
   <app-users></app-users>
+
+  <!-- <app-life-cycle *ngIf="toggle" [title]="title"></app-life-cycle> -->
 </div>
