--- a/frontend-app/src/app/app.component.html
+++ b/frontend-app/src/app/app.component.html
@@ -3,7 +3,10 @@
   <!-- <input type="text" [(ngModel)]="title" />
 
   <button (click)="toggle = !toggle">Toggle</button> -->
-  <app-users></app-users>
 
   <!-- <app-life-cycle *ngIf="toggle" [title]="title"></app-life-cycle> -->
+
+  <app-directive-demo></app-directive-demo>
+
+  <!-- <app-users></app-users> -->
 </div>
