--- a/frontend-app/src/app/app.component.html
+++ b/frontend-app/src/app/app.component.html
@@ -6,7 +6,7 @@
 
   <!-- <app-life-cycle *ngIf="toggle" [title]="title"></app-life-cycle> -->
 
-  <app-directive-demo></app-directive-demo>
+  <!-- <app-directive-demo></app-directive-demo> -->
 
-  <!-- <app-users></app-users> -->
+  <app-users></app-users>
 </div>
