--- a/frontend-app/src/app/users/users.component.html
+++ b/frontend-app/src/app/users/users.component.html
@@ -1,7 +1,7 @@
 <h1>Child Value : {{ childValue }}</h1>
 
-<ul class="list-unstyled">
-  <li>
+<ul class="list-unstyled list-group">
+  <li *ngFor="let user of users" class="list-group-item mb-3">
     <div class="row">
       <div class="col-4 text-center">
         <app-user-image
