--- a/frontend-app/src/app/app.component.html
+++ b/frontend-app/src/app/app.component.html
@@ -8,5 +8,7 @@
 
   <!-- <app-directive-demo></app-directive-demo> -->
 
-  <app-users></app-users>
+  <app-pipe-demo></app-pipe-demo>
+
+  <!-- <app-users></app-users> -->
 </div>
