--- a/frontend-app/src/app/components/demo/pipe-demo/pipe-demo.component.html
+++ b/frontend-app/src/app/components/demo/pipe-demo/pipe-demo.component.html
@@ -2,3 +2,7 @@
 
 <h3 *ngIf="isLoading">Loading...</h3>
 <h3 *ngIf="!isLoading">Promise Data : {{ promise | async }}</h3>
+
+<hr />
+
+<h3>{{ testString | countryCode : "USA" }}</h3>
