custom pipe added

--- a/frontend-app/src/app/components/demo/pipe-demo/pipe-demo.component.html
+++ b/frontend-app/src/app/components/demo/pipe-demo/pipe-demo.component.html
@@ -5,4 +5,30 @@
 
 <hr />
 
-<h3>{{ testString | countryCode : "USA" }}</h3>
+<h3>Country Code Pipe : {{ testString | countryCode : "USA" }}</h3>
+
+<hr />
+
+<div class="row mb-4">
+  <div class="col-6">
+    <div class="d-grid">
+      <button class="btn btn-primary" (click)="addItem()">Add</button>
+    </div>
+  </div>
+  <div class="col-6">
+    <select class="form-control" [(ngModel)]="filteredValue">
+      <option value="">All</option>
+      <option value="pending">Pending</option>
+      <option value="completed">Completed</option>
+    </select>
+  </div>
+</div>
+
+<ul class="list-group">
+  <li
+    *ngFor="let todo of todoCollection | filter : filteredValue"
+    class="list-group-item mb-3"
+  >
+    {{ todo.label | uppercase }} - {{ todo.status }}
+  </li>
+</ul>
