login form created

--- a/frontend-app/src/app/app.component.html
+++ b/frontend-app/src/app/app.component.html
@@ -8,7 +8,8 @@
 
   <!-- <app-directive-demo></app-directive-demo> -->
 
-  <app-pipe-demo></app-pipe-demo>
+  <!-- <app-pipe-demo></app-pipe-demo> -->
 
+  <app-login></app-login>
   <!-- <app-users></app-users> -->
 </div>
