--- a/frontend-app/src/app/components/demo/auth/login/login.component.html
+++ b/frontend-app/src/app/components/demo/auth/login/login.component.html
@@ -5,7 +5,13 @@
         <h3 class="text-center">Login Form</h3>
       </div>
       <div class="card-body">
-        <form>
+        <form (submit)="onSubmit(loginForm)" #loginForm="ngForm">
+          <!-- ERROR :
+          {{
+            loginForm.controls["email"] && loginForm.controls["email"].errors
+              | json
+          }} -->
+
           <!-- email -->
           <div class="form-floating mb-3">
             <input
@@ -14,6 +20,9 @@
               name="email"
               id="email"
               placeholder=""
+              ngModel
+              required
+              email
             />
             <label for="email">Email</label>
           </div>
@@ -26,6 +35,9 @@
               name="password"
               id="password"
               placeholder=""
+              required
+              minlength="6"
+              ngModel
             />
             <label for="password">Password</label>
           </div>
@@ -34,7 +46,13 @@
           <div class="row">
             <div class="col-6">
               <div class="d-grid">
-                <button class="btn btn-primary">Login</button>
+                <button
+                  [disabled]="!loginForm.valid"
+                  type="sumbit"
+                  class="btn btn-primary"
+                >
+                  Login
+                </button>
               </div>
             </div>
             <div class="col-6">
