--- a/frontend-app/src/app/app.component.html
+++ b/frontend-app/src/app/app.component.html
@@ -10,6 +10,9 @@
 
   <!-- <app-pipe-demo></app-pipe-demo> -->
 
-  <app-login></app-login>
+  <!-- <app-login></app-login> -->
+
+  <app-registration></app-registration>
+
   <!-- <app-users></app-users> -->
 </div>
