--- a/frontend-app/src/app/components/demo/auth/registration/registration.component.html
+++ b/frontend-app/src/app/components/demo/auth/registration/registration.component.html
@@ -2,48 +2,58 @@
   <div class="col-6 offset-3">
     <div class="card">
       <div class="card-header">
-        <h3>Registration Form</h3>
+        <h3 class="text-center">Registration Form</h3>
       </div>
       <div class="card-body">
-        <!-- email -->
-        <div class="form-floating mb-3">
-          <input
-            type="text"
-            class="form-control"
-            name="email"
-            id="email"
-            placeholder=""
-          />
-          <label for="email">Email</label>
-        </div>
+        <form [formGroup]="registrationForm" (submit)="onSubmit()">
+          <!-- email -->
+          <div class="form-floating mb-3">
+            <input
+              type="text"
+              class="form-control"
+              name="email"
+              id="email"
+              placeholder=""
+              [formControl]="username"
+            />
+            <label for="email">Email</label>
+          </div>
 
-        <!-- password -->
+          <!-- password -->
 
-        <div class="form-floating mb-3">
-          <input
-            type="password"
-            class="form-control"
-            name="password"
-            id="password"
-            placeholder=""
-          />
-          <label for="password">password</label>
-        </div>
+          <div class="form-floating mb-3">
+            <input
+              type="password"
+              class="form-control"
+              name="password"
+              id="password"
+              placeholder=""
+              [formControl]="password"
+            />
+            <label for="password">password</label>
+          </div>
 
-        <!-- buttons -->
+          <!-- buttons -->
 
-        <div class="row">
-          <div class="col-6">
-            <div class="d-grid">
-              <button class="btn btn-primary">Register</button>
+          <div class="row">
+            <div class="col-6">
+              <div class="d-grid">
+                <button
+                  [disabled]="!registrationForm.valid"
+                  type="submit"
+                  class="btn btn-primary"
+                >
+                  Register
+                </button>
+              </div>
+            </div>
+            <div class="col-6">
+              <div class="d-grid">
+                <button class="btn btn-secondary">Reset</button>
+              </div>
             </div>
           </div>
-          <div class="col-6">
-            <div class="d-grid">
-              <button class="btn btn-secondary">Reset</button>
-            </div>
-          </div>
-        </div>
+        </form>
       </div>
     </div>
   </div>
