--- a/frontend-app/src/app/app.component.html
+++ b/frontend-app/src/app/app.component.html
@@ -14,5 +14,7 @@
 
   <!-- <app-registration></app-registration> -->
 
-  <app-users></app-users>
+  <app-observable-demo></app-observable-demo>
+
+  <!-- <app-users></app-users> -->
 </div>
