post xhr call made

--- a/frontend-app/src/app/app.component.html
+++ b/frontend-app/src/app/app.component.html
@@ -14,7 +14,9 @@
 
   <!-- <app-registration></app-registration> -->
 
-  <app-observable-demo></app-observable-demo>
+  <!-- <app-observable-demo></app-observable-demo> -->
+
+  <app-posts></app-posts>
 
   <!-- <app-users></app-users> -->
 </div>
