--- a/frontend-app/src/app/components/demo/posts/posts.component.html
+++ b/frontend-app/src/app/components/demo/posts/posts.component.html
@@ -1,7 +1,10 @@
 <h1>The Posts Component</h1>
 
+<button class="btn btn-primary" (click)="addPost()">Add Post</button>
+
 <ul>
   <li *ngFor="let post of posts">
     {{ post.title | uppercase }} - {{ post.body | uppercase }}
+    <button class="btn btn-danger" (click)="deletePost(post.id)">🗑️</button>
   </li>
 </ul>
