--- a/frontend-app/src/app/app.component.html
+++ b/frontend-app/src/app/app.component.html
@@ -16,7 +16,7 @@
 
   <!-- <app-observable-demo></app-observable-demo> -->
 
-  <app-posts></app-posts>
+  <!-- <app-posts></app-posts> -->
 
-  <!-- <app-users></app-users> -->
+  <app-users></app-users>
 </div>
