--- a/frontend-app/src/app/users/users.component.html
+++ b/frontend-app/src/app/users/users.component.html
@@ -1,5 +1,7 @@
 <!-- <h1>Child Value : {{ childValue }}</h1> -->
 
+{{ users | json }}
+
 <ul class="list-unstyled list-group">
   <li
     appHighlight
