--- a/frontend-app/src/app/app.component.html
+++ b/frontend-app/src/app/app.component.html
@@ -12,7 +12,7 @@
 
   <!-- <app-login></app-login> -->
 
-  <!-- <app-registration></app-registration> -->
+  <app-registration></app-registration>
 
   <!-- <app-observable-demo></app-observable-demo> -->
 
