--- a/frontend-app/src/app/app.component.html
+++ b/frontend-app/src/app/app.component.html
@@ -10,13 +10,13 @@
 
   <!-- <app-pipe-demo></app-pipe-demo> -->
 
-  <!-- <app-login></app-login> -->
+  <app-login *ngIf="!isAuthenticated()"></app-login>
 
-  <app-registration></app-registration>
+  <!-- <app-registration></app-registration> -->
 
   <!-- <app-observable-demo></app-observable-demo> -->
 
   <!-- <app-posts></app-posts> -->
 
-  <app-users></app-users>
+  <app-users *ngIf="isAuthenticated()"></app-users>
 </div>
