--- a/frontend-app/src/app/components/main-navigation/main-navigation.component.html
+++ b/frontend-app/src/app/components/main-navigation/main-navigation.component.html
@@ -23,6 +23,9 @@
           <li class="nav-item" *ngIf="authService.isAuthenticated()">
             <a class="nav-link" [routerLink]="['users']">Users</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" [routerLink]="['products']">Products</a>
+          </li>
         </ul>
       </div>
       <div class="col-3">
