--- a/frontend-app/src/app/components/main-navigation/main-navigation.component.html
+++ b/frontend-app/src/app/components/main-navigation/main-navigation.component.html
@@ -26,6 +26,9 @@
           <li class="nav-item">
             <a class="nav-link" [routerLink]="['products']">Products</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" [routerLink]="['lazy']">Lazy</a>
+          </li>
         </ul>
       </div>
       <div class="col-3">
