--- a/frontend-app/src/app/components/product/product.component.html
+++ b/frontend-app/src/app/components/product/product.component.html
@@ -5,7 +5,11 @@
         <a routerLink="iPhone15/201/overview">Overview</a>
       </li>
       <li class="list-group-item">
-        <a routerLink="specification">Specification</a>
+        <a
+          routerLink="specification"
+          [queryParams]="{ description: 'very good product' }"
+          >Specification</a
+        >
       </li>
     </ul>
   </div>
